--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Tuple<object, object, object>
+﻿@model System.Tuple<object, object, object, object>
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -17,6 +17,11 @@
         <tr>
             <td>
                 <div class="form-inline">
+                    <div class="form-group">
+                        <select v-model="searchData.ChannelID">
+                            <option v-for="(service, index) in services" :value="service.ChannelID">{{service.Desript}}</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <input class="form-control" id="startDate" placeholder="시작일" v-model="searchData.startDate">
                             ~ <input placeholder="종료일" id="endDate" class="form-control" v-model="searchData.endDate">
@@ -67,8 +72,9 @@ var vue = new Vue({
     el: '#container',
     data: {
         surveys : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model.Item1)),
+        pager : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model.Item2)),
         searchData : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model.Item3)),
-        pager : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model.Item2))
+        services : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model.Item4))
     },
     mounted : function(){
         $("#container").show();
