처음페이지 변경

--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -186,7 +186,7 @@
                     success : function (res) {
                         if(res.success)
                         {
-                            var url = '/home/index?channelid=' + '@Model.survey.ChannelID';
+                            var url = '/home/List?channelid=' + '@Model.survey.ChannelID';
                             $(location).attr('href',url);
                         } 
                         else
